Remove primitive class constructors
Constructors the classes Boolean, Integer, Long, Float, and Double that
accept a primitive input are deprecated in Java 11.